# certificate-stark

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: merkle.rs  range.rs  rescue.rs  schnorr.rs  state_transition.rs
examples/: state-transition.rs
src/: air.rs  constants.rs  lib.rs  prover.rs  tests.rs  trace.rs
src/merkle/: constants.rs  mod.rs
src/merkle/init/: air.rs  constants.rs  mod.rs  prover.rs  tests.rs  trace.rs
src/merkle/update/: air.rs  constants.rs  mod.rs  prover.rs  tests.rs  trace.rs
src/range/: air.rs  mod.rs  prover.rs  tests.rs
src/schnorr/: air.rs  constants.rs  mod.rs  prover.rs  tests.rs  trace.rs
src/utils/: ecc.rs  field.rs  mod.rs  periodic_columns.rs  rescue.rs
