[package]
name = "certificate-stark"
description = "Implementation of the AIR program for the Topos state-transition"
authors = ["Toposware Developers <dev@toposware.com>"]
homepage = "https://github.com/ToposWare/certificate-stark"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ToposWare/certificate-stark"
version = "0.1.0"
edition = "2018"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["cryptography", "crypto", "stark", "zero-knowledge"]

[dependencies]
bitvec = { version = "0.22", default-features = false }
getrandom = { version = "0.2", default-features = false, features = ["js"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
log = { version = "0.4", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
winterfell = { git = "https://github.com/ToposWare/winterfell.git", branch = "main", default-features = false }


[features]
concurrent = ["winterfell/concurrent", "std"]
default = ["std"]
std = ["winterfell/std"]

[dev-dependencies]
criterion = "0.3"
env_logger = "0.9"
gumdrop = "0.8"

[profile.release]
codegen-units = 1
lto = true

[profile.bench]
codegen-units = 1
lto = true


[[bench]]
name = "merkle"
harness = false

[[bench]]
name = "range"
harness = false

[[bench]]
name = "rescue"
harness = false

[[bench]]
name = "schnorr"
harness = false

[[bench]]
name = "state_transition"
harness = false
